# training

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  basis_functions.py  evaluate.py  fit_coefficients.py  pyproject.toml  reconstruct_steps.py  schemas.py  split.py  trace_parser.py  validate_traces.py
datasheets/: h100-nvl.json  h100-sxm.json
model_design_plans/: 2026-03-06-corrected-roofline-active-learning.md  2026-03-06-corrected-roofline-data-collection-plan.md  2026-03-06-corrected-roofline-features-design.md  2026-03-06-corrected-roofline-training-workloads.md
replay_data/: 20260217-155451-llama-2-7b-tp1-codegen.json  20260217-155451-llama-2-7b-tp1-codegen_ground_truth.json  20260217-162547-llama-2-7b-tp1-roleplay.json  20260217-162547-llama-2-7b-tp1-roleplay_ground_truth.json  20260217-170634-llama-2-7b-tp1-reasoning.json  20260217-170634-llama-2-7b-tp1-reasoning_ground_truth.json  20260217-202857-llama-2-70b-tp4-general.json  20260217-202857-llama-2-70b-tp4-general_ground_truth.json  20260217-203421-llama-2-70b-hf-tp4-codegen.json  20260217-203421-llama-2-70b-hf-tp4-codegen_ground_truth.json  20260217-231439-llama-2-7b-tp1-general.json  20260217-231439-llama-2-7b-tp1-general_ground_truth.json  20260218-065057-llama-2-70b-hf-tp4-reasoning.json  20260218-065057-llama-2-70b-hf-tp4-reasoning_ground_truth.json  20260218-084319-llama-2-70b-tp4-roleplay.json  20260218-084319-llama-2-70b-tp4-roleplay_ground_truth.json  20260218-120914-mixtral-8x7b-v0-1-tp2-codegen.json  20260218-120914-mixtral-8x7b-v0-1-tp2-codegen_ground_truth.json  ground_truth_schema.md  (+14 more)
(+112 files in other folders)
